src/tests/snapshots/Shlang__tests__parser_test__struct_access.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"b.a*2\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: MULTIPLY,
                left: Spanned {
                    unspanned: FieldAccess(
                        FieldAccess {
                            target: Spanned {
                                unspanned: Variable(
                                    "b",
                                ),
                                span: (
                                    0,
                                    1,
                                ),
                            },
                            requested: Spanned {
                                unspanned: Variable(
                                    "a",
                                ),
                                span: (
                                    2,
                                    3,
                                ),
                            },
                        },
                    ),
                    span: (
                        1,
                        2,
                    ),
                },
                right: Spanned {
                    unspanned: Value(
                        Num(
                            2.0,
                        ),
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            3,
            4,
        ),
    },
)
