src/tests/snapshots/Shlang__tests__parser_test__struct_access_call.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"a.b().c\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: ACCESS,
                left: Spanned {
                    unspanned: Variable(
                        Variable {
                            name: "a",
                        },
                    ),
                    span: (
                        0,
                        1,
                    ),
                },
                right: Spanned {
                    unspanned: BinaryNode(
                        BinaryNode {
                            kind: ACCESS,
                            left: Spanned {
                                unspanned: Call(
                                    Call {
                                        callee: Spanned {
                                            unspanned: Variable(
                                                Variable {
                                                    name: "b",
                                                },
                                            ),
                                            span: (
                                                2,
                                                3,
                                            ),
                                        },
                                        args: [],
                                    },
                                ),
                                span: (
                                    3,
                                    5,
                                ),
                            },
                            right: Spanned {
                                unspanned: Variable(
                                    Variable {
                                        name: "c",
                                    },
                                ),
                                span: (
                                    6,
                                    7,
                                ),
                            },
                        },
                    ),
                    span: (
                        5,
                        6,
                    ),
                },
            },
        ),
        span: (
            1,
            2,
        ),
    },
)
