src/tests/snapshots/Shlang__tests__parser_test__var_declare_and_assign_value.snap
---
source: src/tests/parser_test.rs
expression: "parse_full(\"var a = 2;\")"
---
Block {
    body: [
        Spanned {
            unspanned: Declaration(
                Declaration {
                    var_name: "a",
                    value: Spanned {
                        unspanned: Value(
                            Num(
                                2.0,
                            ),
                        ),
                        span: (
                            8,
                            9,
                        ),
                    },
                },
            ),
            span: (
                4,
                7,
            ),
        },
    ],
}
